Just modify the html index file :D

--- a/index/index.html
+++ b/index/index.html
@@ -1,1 +1,10 @@
-ECHO is on.
+<html>
+
+<head>
+<title>My portofilo isA</title>
+</head>
+
+<body style="background-color: black;">
+
+</body>
+</html>
